2021-02-19  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/Shell.java:
	Delay starting the JShell instance until need to add classpath to
	be updated.  In bootstrap.jsh, explicitly link parent ClassLoader.

	* src/main/java/galyleo/server/Server.java:
	Shutdown immediately without waiting to send shutdown_reply.

2021-02-17  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Renderer.java:
	Implement render(Object) with a ServiceLoader provided through
	RendererMap (ServiceProviderMap).

	* src/main/java/galyleo/shell/MagicMap.java,
	src/main/java/galyleo/util/ServiceProviderMap.java:
	Initial writing.

	* src/main/java/galyleo/shell/Shell.java:
	In addToClasspath(String), analyze JARs for likely Maven
	artifacts.
	In execute(Shell,InputStream,PrintStream,PrintStream,String,String),
	print Exception stack traces and REJECTED snippets (with
	diagnoses) on err.

	* src/main/resources/bootstrap.jsh:
	Create __ class with invokeStaticMethod() to simplify calls from
	the JShell client.

2021-02-14  Allen D. Ball  <ball@hcf.dev>

	* Added (trivial) Magic implementations for JShell methods.

	* Reload Magic service providers on Shell (re)start.

2021-02-13  Allen D. Ball  <ball@hcf.dev>

	* Create an isolated ClassLoader in the JShell instance to load
	the galyleo-kernel.jar.

	* src/main/resources/bootstrap.jsh:
	Initial writing: Bootstrap galyleo-kernel.jar in JShell instance
	and provide user methods (e.g., print(Object)) and kernel
	implementation methods (e.g., Magic.receive()).

	* src/main/java/galyleo/kernel/Kernel.java:
	Load all JARS in ${spark-home}/jars and ${hadoop-home}/jars even
	if duplicate groupId:artifactId are implemented.

2021-02-10  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Server.java:
	Added isComplete(String) to interface and implemented
	is_complete_request/is_complete_reply.

2021-02-09  Allen D. Ball  <ball@hcf.dev>

	* Track Connections in the Server and associate a Connection with